# License-Plate-Recognition

./: CMakeLists.txt  README.md
data/: example
src/: Detector.cpp  Detector.h  OCR.cpp  OCR.h  main.cpp
